--- a/tipovacka-app/src/app/components/user-leagues-overview/user-leagues-overview.component.html
+++ b/tipovacka-app/src/app/components/user-leagues-overview/user-leagues-overview.component.html
@@ -1,14 +1,14 @@
 <header>
-  <h1>{{ 'CHOOSE_USER_LEAGUE.TITLE' | transloco }}</h1>
+  <h1>{{ 'USER_LEAGUES_OVERVIEW.TITLE' | transloco }}</h1>
 </header>
-<div class="flex flex-col gap-8">
+<div class="flex flex-col gap-12">
   <div
     *ngFor="let userLeague of ((dataService.userLeagues$ | async) || []) | sortBy: 'name'"
     class="flex flex-col gap-2"
   >
     <div>
-      <div class="flex gap-2">
-        <h2>
+      <div class="flex gap-2 items-center">
+        <h2 class="truncate">
           {{ userLeague.name }}
         </h2>
         <span
@@ -20,41 +20,41 @@
     <div class="grid grid-cols-2 md:grid-cols-5 gap-2">
       <button
         (click)="chooseUserLeague(userLeague)"
-        class="btn btn-primary flex justify-between"
+        class="btn btn-primary col-span-2 md:col-span-1"
       >
-        {{"CHOOSE_USER_LEAGUE.SELECT" | transloco}}
-        <span class="material-icons md-18">arrow_forward_ios</span>
-      </button>
-      <button
-        (click)="deleteUserLeague(userLeague.id)"
-        *ngIf="userLeague.isAdmin"
-        class="btn btn-critical flex justify-between"
-      >
-        {{"CHOOSE_USER_LEAGUE.DELETE" | transloco}}
-        <span class="material-icons md-18">delete_forever</span>
+        <span class="material-icons md-18">filter_alt</span>
+        {{"USER_LEAGUES_OVERVIEW.SELECT" | transloco}}
       </button>
       <button
         (click)="invite(userLeague.id)"
-        class="btn btn-secondary flex justify-between"
+        class="btn btn-secondary"
       >
-        {{"CHOOSE_USER_LEAGUE.INVITE" | transloco}}
         <span class="material-icons md-18">ios_share</span>
+        {{"USER_LEAGUES_OVERVIEW.INVITE" | transloco}}
       </button>
       <button
         (click)="leave(userLeague.id)"
         *ngIf="userLeague.isUser"
-        class="btn btn-secondary flex justify-between"
+        class="btn btn-secondary"
       >
-        {{"CHOOSE_USER_LEAGUE.LEAVE" | transloco}}
         <span class="material-icons md-18">logout</span>
+        {{"USER_LEAGUES_OVERVIEW.LEAVE" | transloco}}
       </button>
       <button
         (click)="openUsersInUserLeagueModal(userLeague)"
         *ngIf="userLeague.isAdmin"
-        class="btn btn-secondary flex justify-between"
+        class="btn btn-secondary"
       >
-        {{"CHOOSE_USER_LEAGUE.USERS" | transloco}}
         <span class="material-icons md-18">group</span>
+        {{"USER_LEAGUES_OVERVIEW.USERS" | transloco}}
+      </button>
+      <button
+        (click)="deleteUserLeague(userLeague.id)"
+        *ngIf="userLeague.isAdmin"
+        class="btn btn-critical"
+      >
+        <span class="material-icons md-18">delete_forever</span>
+        {{"USER_LEAGUES_OVERVIEW.DELETE" | transloco}}
       </button>
     </div>
   </div>
@@ -63,7 +63,7 @@
     *ngIf="dataService.selectedUserLeague$ | async"
     class="btn btn-secondary flex justify-between"
   >
-    {{ 'CHOOSE_USER_LEAGUE.SHOW_ALL' | transloco }}
+    {{ 'USER_LEAGUES_OVERVIEW.SHOW_ALL' | transloco }}
     <span class="material-icons">close</span>
   </button>
   <button
