--- a/tipovacka-app/src/app/components/users-for-user-league/users-for-user-league.component.html
+++ b/tipovacka-app/src/app/components/users-for-user-league/users-for-user-league.component.html
@@ -18,7 +18,7 @@
       *ngIf="(authService.getUserData$ | async)?.uid === user.userUid"
       class="btn btn-critical flex justify-between"
     >
-      {{"CHOOSE_USER_LEAGUE.LEAVE" | transloco}}
+      {{"USER_LEAGUES_OVERVIEW.LEAVE" | transloco}}
       <span class="material-icons md-18">logout</span>
     </button>
     <button
