--- a/tipovacka-app/src/app/components/header/header.component.html
+++ b/tipovacka-app/src/app/components/header/header.component.html
@@ -1,11 +1,6 @@
-<div class="flex p-4 mx-auto items-center justify-between">
+<div class="flex py-4 mx-auto items-center justify-between">
   <a routerLink="">
-    <img
-      alt="Tipovačka"
-      class="w-6 h-6"
-      src="/assets/icons/logo.png"
-      srcset="/assets/icons/logo.png"
-    >
+    <div>Sportovsky</div>
   </a>
   <div class="flex gap-2 items-center">
     <button
