--- a/tipovacka-app/src/app/components/info/info.component.html
+++ b/tipovacka-app/src/app/components/info/info.component.html
@@ -5,6 +5,7 @@
   <ul class="list-disc list-inside space-y-4">
     <li>{{ 'INFO.MATCH_TIP_DEADLINE' | transloco }}</li>
     <li>{{ 'INFO.MATCH_RESULT_WRITE' | transloco }}</li>
+    <li>{{ 'INFO.MATCH_DEADLINE' | transloco }}</li>
   </ul>
 </div>
 <footer>
