--- a/tipovacka-app/src/app/components/result-button/result-button.component.html
+++ b/tipovacka-app/src/app/components/result-button/result-button.component.html
@@ -2,13 +2,15 @@
   [ngClass]="{
       'border-gray-950': type === 'highlight',
       'border-gray-300': type === 'normal',
+      'hover:border-gray-600': type === 'normal' && hover,
       'border-green-600': type === 'correct',
       'border-red-600': type === 'incorrect',
       'opacity-50': hide,
+      'hover:opacity-100': hover,
       'w-20 h-20': size === 'normal',
-      'w-14 h-14': size === 'small'
+      'w-14 h-14': size === 'small',
     }"
-  class="rounded-full border-2 flex justify-center items-center p-2 transition-all"
+  class="cursor-pointer rounded-full border-2 flex justify-center items-center p-2 transition-all"
 >
   <div
     [style.background-color]="backgroundColor"
