--- a/tipovacka-app/src/app/pages/dashboard/next-matches/next-matches.component.html
+++ b/tipovacka-app/src/app/pages/dashboard/next-matches/next-matches.component.html
@@ -1,18 +1,19 @@
-<div
-  *ngIf="(dataService.nextMatches$ | async) as nextMatches"
-  class="grid grid-cols-1 w-full gap-y-8">
-  <app-matches-overview
-    [leagues]="(dataService.leaguesOfNextMatches$ | async) || []"
-    [matches]="nextMatches"
-    [votes]="(dataService.votesOfNextMatches$ | async) || {}"
-  />
+<ng-container *ngIf="(dataService.nextMatches$ | async) as nextMatches">
   <div
-    *ngIf="!nextMatches.length"
-    class="p-4 text-sm text-center text-gray-800 rounded-lg bg-gray-50"
-    role="alert">
-    {{ 'NO_SCHEDULE_MATCHES' | transloco }}
+    class="grid grid-cols-1 w-full gap-y-8">
+    <app-matches-overview
+      [leagues]="(dataService.leaguesOfNextMatches$ | async) || []"
+      [matches]="nextMatches"
+      [votes]="(dataService.votesOfNextMatches$ | async) || undefined"
+    />
+    <div
+      *ngIf="!nextMatches.length"
+      class="p-4 text-sm text-center text-gray-800 rounded-lg bg-gray-50"
+      role="alert">
+      {{ 'NO_SCHEDULE_MATCHES' | transloco }}
+    </div>
   </div>
-</div>
+</ng-container>
 
 <div
   *ngIf="!(dataService.nextMatches$ | async)"
@@ -25,8 +26,6 @@
   </div>
   <div class="grid grid-cols-1 w-full gap-y-8">
     <div class="mb-2 w-1/3 h-4 bg-gray-100 justify-self-center"></div>
-    <app-match-skeleton/>
-    <app-match-skeleton/>
     <app-match-skeleton/>
     <app-match-skeleton/>
     <app-match-skeleton/>
