--- a/tipovacka-app/src/styles.scss
+++ b/tipovacka-app/src/styles.scss
@@ -25,15 +25,23 @@
 }
 
 .btn {
-  @apply font-medium rounded-lg text-sm px-5 py-2.5 focus:outline-none flex items-center gap-2;
+  @apply font-medium rounded-lg text-sm px-5 py-2.5 focus:outline-none flex items-center gap-2 drop-shadow-md;
 }
 
 .btn-primary {
   @apply text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300;
+
+  &:not(:disabled) {
+    @apply hover:bg-blue-800 focus:ring-4 focus:ring-blue-300;
+  }
 }
 
 .btn-secondary {
-  @apply text-gray-900 bg-white border border-gray-200 hover:bg-gray-100 hover:text-gray-700 focus:z-10 focus:ring-4 focus:ring-gray-200;
+  @apply text-gray-900 bg-white border border-gray-200;
+
+  &:not(:disabled) {
+    @apply hover:bg-gray-100 hover:text-gray-700 focus:z-10 focus:ring-4 focus:ring-gray-200
+  }
 }
 
 .btn-critical {
