--- a/tipovacka-app/src/app/pages/dashboard/standings/standings.component.html
+++ b/tipovacka-app/src/app/pages/dashboard/standings/standings.component.html
@@ -40,6 +40,9 @@
         (click)="toggleSort()"
         class="btn btn-secondary">
         <span class="material-icons md-18">sort</span>
+        <span
+          *ngIf="sortBy === 'correctRatio'"
+          class="md:hidden block material-icons md-18">percent</span>
         <span class="hidden md:block">
             {{(sortBy === 'correctVotes' ? 'STANDINGS.FILTER.SUCCESSFUL_TIPS' : 'STANDINGS.FILTER.SUCCESSFUL_RATE') | transloco}}
           </span>
