--- a/tipovacka-app/src/app/components/match/match.component.html
+++ b/tipovacka-app/src/app/components/match/match.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col w-full items-center rounded-xl relative overflow-hidden py-4 bg-gray-50 transition-all">
+<div class="flex flex-col w-full items-center rounded-xl relative overflow-hidden pt-4 pb-2 bg-gray-50 transition-all">
   <div class="absolute md:-left-12 -left-16 top-0 h-full flex items-end">
     <img
       [appImgSrcError]="'assets/images/players/default.png'"
@@ -19,7 +19,8 @@
       class="h-[90%] w-auto"
     >
   </div>
-  <div class="z-10 flex items-center gap-4">
+  <div class="z-10 absolute left-0 bottom-0 w-full h-16 bg-gradient-to-t from-gray-900/70 to-gray-900/0"></div>
+  <div class="z-20 flex items-center gap-4">
     <img
       [alt]="data.league"
       class="h-6 w-auto"
@@ -31,7 +32,7 @@
       <div>{{data.datetime | datetimeFormatBy}}</div>
     </div>
   </div>
-  <div class="z-10 flex mt-6 gap-2 font-bold text-lg md:text-3xl w-full">
+  <div class="z-20 flex mt-6 gap-2 font-bold text-lg md:text-3xl w-full">
     <div class="flex-1 flex justify-end">
       <div class="drop-shadow-md">
         {{data.homeTeam.name}}
@@ -44,7 +45,7 @@
       </div>
     </div>
   </div>
-  <div class="z-10 flex gap-2 mt-2 w-full justify-center">
+  <div class="z-20 flex gap-2 mt-2 w-full justify-center">
     <button
       (click)="chooseResult(1)"
       [disabled]="data.datetime! < now || sendingVote !== undefined"
@@ -59,12 +60,16 @@
       class="btn"
     >
       <img
-        *ngIf="states['1'] !== 'normal'"
+        [ngClass]="{
+            'hidden': states['1'] === 'normal'
+          }"
         [src]="'assets/images/' + data.home + '.png'"
         class="h-8">
       <img
-        *ngIf="states['1'] === 'normal'"
         [appImgSrcError]="'assets/images/' + data.home + '.png'"
+        [ngClass]="{
+            'hidden': states['1'] !== 'normal'
+          }"
         [src]="'assets/images/' + data.home + '_for_white_bg.png'"
         class="h-8">
     </button>
@@ -99,17 +104,37 @@
       }"
       [style.background-color]="states['2'] === 'highlight' ? data.awayTeam.color : ''"
       [style.border-color]="states['2'] === 'highlight' ? data.awayTeam.color : ''"
-      class="btn btn-secondary"
+      class="btn"
     >
       <img
-        *ngIf="states['2'] !== 'normal'"
+        [ngClass]="{
+            'hidden': states['2'] === 'normal'
+          }"
         [src]="'assets/images/' + data.away + '.png'"
         class="h-8">
       <img
-        *ngIf="states['2'] === 'normal'"
         [appImgSrcError]="'assets/images/' + data.away + '.png'"
+        [ngClass]="{
+            'hidden': states['2'] !== 'normal'
+          }"
         [src]="'assets/images/' + data.away + '_for_white_bg.png'"
         class="h-8">
     </button>
+  </div>
+  <div class="z-20 flex text-xxs mt-2 gap-1 text-white">
+    <div>
+      {{((data && data.totalVotes ? ((data![1] || 0) / data.totalVotes) : 0) * 100) | number: '1.0-0'}}%
+      <span class="opacity-50">({{data![1]}})</span>
+    </div>
+    -
+    <div>
+      {{((data && data.totalVotes ? ((data![0] || 0) / data.totalVotes) : 0) * 100) | number: '1.0-0'}}%
+      <span class="opacity-50">({{data![0]}})</span>
+    </div>
+    -
+    <div>
+      {{((data && data.totalVotes ? ((data![2] || 0) / data.totalVotes) : 0) * 100) | number: '1.0-0'}}%
+      <span class="opacity-50">({{data![2]}})</span>
+    </div>
   </div>
 </div>
