--- a/tipovacka-app/src/app/components/match/match.component.html
+++ b/tipovacka-app/src/app/components/match/match.component.html
@@ -1,4 +1,20 @@
-<div class="flex flex-col w-full items-center rounded-xl relative overflow-hidden pt-4 pb-2 bg-gray-50 transition-all">
+<div class="flex flex-col w-full items-center rounded-xl relative overflow-hidden pt-4 pb-2 bg-gray-50 transition-all max-w-2xl mx-auto">
+  <div
+    [ngClass]="{
+      'opacity-30': !hides['1'],
+      'opacity-10': hides['1']
+    }"
+    [style.--tw-gradient-from]="data.homeTeam.color"
+    class="absolute left-0 bottom-0 w-1/3 h-full bg-gradient-to-r from-blue-300"
+  ></div>
+  <div
+    [ngClass]="{
+      'opacity-30': !hides['2'],
+      'opacity-10': hides['2']
+    }"
+    [style.--tw-gradient-from]="data.awayTeam.color"
+    class="absolute right-0 bottom-0 w-1/3 h-full bg-gradient-to-l from-blue-300 opacity-30"
+  ></div>
   <div class="absolute md:-left-12 -left-16 top-0 h-full flex items-end">
     <img
       [appImgSrcError]="'assets/images/players/default.png'"
@@ -19,7 +35,6 @@
       class="h-[90%] w-auto"
     >
   </div>
-  <div class="z-10 absolute left-0 bottom-0 w-full h-16 bg-gradient-to-t from-gray-900/70 to-gray-900/0"></div>
   <div class="z-20 flex items-center gap-4">
     <img
       [alt]="data.league"
@@ -45,7 +60,18 @@
       </div>
     </div>
   </div>
-  <div class="z-20 flex gap-2 mt-2 w-full justify-center">
+  <div
+    *ngIf="!(authService.isSignIn$ | async) || !votes"
+    class="z-20 flex gap-2 mt-2 w-full h-[54px] justify-center items-center text-xs text-gray-600"
+  >
+    {{ 'VOTE_LOADING' | transloco }}
+  </div>
+  <div
+    [ngClass]="{
+      'hidden': (authService.isSignIn$ | async) && !votes
+    }"
+    class="z-20 flex gap-2 mt-2 w-full justify-center"
+  >
     <button
       (click)="chooseResult(1)"
       [disabled]="data.datetime! < now || sendingVote !== undefined"
@@ -121,7 +147,7 @@
         class="h-8">
     </button>
   </div>
-  <div class="z-20 flex text-xxs mt-2 gap-1 text-white">
+  <div class="z-20 flex text-xxs mt-2 gap-1">
     <div>
       {{((data && data.totalVotes ? ((data![1] || 0) / data.totalVotes) : 0) * 100) | number: '1.0-0'}}%
       <span class="opacity-50">({{data![1]}})</span>
