--- a/tipovacka-app/src/app/components/matches-overview/matches-overview.component.html
+++ b/tipovacka-app/src/app/components/matches-overview/matches-overview.component.html
@@ -20,7 +20,7 @@
       class="material-icons md-12">close</span>
   </button>
 </div>
-<div class="grid grid-cols-1 w-full gap-y-4 mt-8">
+<div class="flex flex-col w-full gap-y-4 mt-8">
   <ng-container *ngFor="let match of matches; let i = index">
     <app-match
       *ngIf="!leaguesFilter.length || isLeagueInFilter[match.league]"
