--- a/tipovacka-app/src/app/pages/dashboard/previous-matches/previous-matches.component.html
+++ b/tipovacka-app/src/app/pages/dashboard/previous-matches/previous-matches.component.html
@@ -1,6 +1,6 @@
 <div
   *ngIf="(dataService.prevMatches$ | async) as prevMatches"
-  class="grid grid-cols-1 w-full gap-y-8">
+  class="flex flex-col mt-8">
   <app-matches-overview
     [leagues]="(dataService.leaguesOfPrevMatches$ | async) || []"
     [matches]="prevMatches"
@@ -17,19 +17,9 @@
 
 <div
   *ngIf="!(dataService.prevMatches$ | async)"
-  class="grid grid-cols-1 w-full gap-y-8 mt-8 animate-pulse"
+  class="flex flex-col mt-8 gap-y-8"
 >
-  <div class="flex">
-    <div class="w-20 h-5 badge bg-gray-100"></div>
-    <div class="w-20 h-5 badge bg-gray-100"></div>
-    <div class="w-20 h-5 badge bg-gray-100"></div>
-  </div>
-  <div class="grid grid-cols-1 w-full gap-y-2">
-    <div class="mb-2 w-1/3 h-4 bg-gray-100 justify-self-center"></div>
-    <app-match-skeleton [small]="true"/>
-    <app-match-skeleton [small]="true"/>
-    <app-match-skeleton [small]="true"/>
-    <app-match-skeleton [small]="true"/>
-    <app-match-skeleton [small]="true"/>
-  </div>
+  <app-match-skeleton/>
+  <app-match-skeleton/>
+  <app-match-skeleton/>
 </div>
