--- a/tipovacka-app/src/app/components/matches-overview/matches-overview.component.html
+++ b/tipovacka-app/src/app/components/matches-overview/matches-overview.component.html
@@ -21,7 +21,7 @@
   </button>
 </div>
 <div class="flex flex-col w-full gap-y-8">
-  <ng-container *ngFor="let match of matches; let i = index">
+  <ng-container *ngFor="let match of matches | filterMatchesBy: leaguesFilter; let i = index">
     <app-match
       *ngIf="!leaguesFilter.length || isLeagueInFilter[match.league]"
       [data]="match"
