--- a/tipovacka-app/src/styles.scss
+++ b/tipovacka-app/src/styles.scss
@@ -25,7 +25,7 @@
 }
 
 .btn {
-  @apply font-medium rounded-lg text-sm px-5 py-2.5 focus:outline-none flex items-center gap-2 drop-shadow-md;
+  @apply font-medium rounded-lg text-sm px-5 py-2.5 focus:outline-none flex items-center gap-2;
 }
 
 .btn-primary {
