add link to discord

--- a/tipovacka-app/src/app/pages/dashboard/dashboard.component.html
+++ b/tipovacka-app/src/app/pages/dashboard/dashboard.component.html
@@ -36,11 +36,10 @@
         {{ 'MENU.STANDINGS' | transloco }}
       </a>
     </li>
-    <!--
     <li *ngIf="authService.isSignIn$ | async">
       <a
         class="py-4 px-4 block"
-        href="https://discord.gg/v8GxDMVG"
+        href="https://discord.gg/eP2xbe8F"
         target="_blank"
       >
         <img
@@ -51,7 +50,6 @@
         >
       </a>
     </li>
-    -->
   </ul>
 </div>
 
