add margin before match card and filter

--- a/tipovacka-app/src/app/components/matches-overview/matches-overview.component.html
+++ b/tipovacka-app/src/app/components/matches-overview/matches-overview.component.html
@@ -1,6 +1,6 @@
 <div
   *ngIf="leagues.length > 1"
-  class="flex gap-2">
+  class="flex gap-2 mb-4">
   <button
     (click)="addLeagueToFilter(league)"
     *ngFor="let league of leagues"
