--- a/tipovacka-app/src/app/pages/dashboard/standings/standings.component.html
+++ b/tipovacka-app/src/app/pages/dashboard/standings/standings.component.html
@@ -36,24 +36,13 @@
           </button>
         </ng-container>
       </ng-container>
-      <button
-        (click)="toggleSort()"
-        class="btn btn-secondary">
-        <span class="material-icons md-18">sort</span>
-        <span
-          *ngIf="sortBy[0] === 'correctRatio'"
-          class="md:hidden block material-icons md-18">percent</span>
-        <span class="hidden md:block">
-            {{(sortBy[0] === 'correctVotes' ? 'STANDINGS.FILTER.SUCCESSFUL_TIPS' : 'STANDINGS.FILTER.SUCCESSFUL_RATE') | transloco}}
-          </span>
-      </button>
     </div>
   </div>
   <ng-container *ngIf="(dataService.standings$ | async) as standings">
     <table
       class="w-full">
       <tr
-        *ngFor="let user of standings | sortBy: sortBy: 'desc'; let i = index"
+        *ngFor="let user of standings | sortBy: ['correctRatio', 'correctVotes']: 'desc'; let i = index"
         [ngClass]="{
           'font-bold': (authService.getUserData$ | async)?.uid === user.uid
         }"
@@ -61,7 +50,8 @@
       >
         <td class="text-gray-700 text-right">{{i + 1}}.</td>
         <td class="w-full">{{user.name}}</td>
-        <td class="font-bold text-right">{{user.correctVotes}}</td>
+        <td class="text-xxs text-gray-600 italic text-right whitespace-nowrap">{{user.correctVotes}}
+          / {{user.totalVotes}}</td>
         <td>
         <span
           [ngClass]="{
@@ -69,7 +59,7 @@
             'bg-orange-100 text-orange-800': user.correctVotes / user.totalVotes > 0.33 && user.correctVotes / user.totalVotes < 0.67,
             'bg-green-100 text-green-800': user.correctVotes / user.totalVotes > 0.66
           }"
-          class="badge font-medium "
+          class="badge font-bold"
         >
           {{(user.correctRatio * 100) | number: '2.1-1':'cs-CZ'}}%
         </span>
