--- a/tipovacka-app/src/app/pages/dashboard/standings/standings.component.html
+++ b/tipovacka-app/src/app/pages/dashboard/standings/standings.component.html
@@ -48,7 +48,14 @@
         }"
         class="border-gray-200 border-b-[1px] last:border-b-0"
       >
-        <td class="text-gray-700 text-right">{{i + 1}}.</td>
+        <td
+          [ngSwitch]="i"
+          class="text-gray-700 text-right">
+          <ng-container *ngSwitchCase="0">🥇</ng-container>
+          <ng-container *ngSwitchCase="1">🥈</ng-container>
+          <ng-container *ngSwitchCase="2">🥉</ng-container>
+          <ng-container *ngSwitchDefault>{{i + 1}}.</ng-container>
+        </td>
         <td class="w-full">{{user.name}}</td>
         <td class="font-bold">{{user.points}}</td>
         <td class="text-xxs text-gray-600 italic text-right whitespace-nowrap">
